ORC-590: [C++] added check for missing LENGTH stream in StringDictionaryColumn

Added checks for missing streams in StringDictionaryColumnReader.

Testing:
* added a corrupt file and a test to TestFileScan.cc